clusters/prod-cluster/organizations/numinia/age-of-ai/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: age-of-ai-deployment
  namespace: numinia
  labels:
    environment: pro
    app: age-of-ai
    pod-type: age-of-ai
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: age-of-ai
      environment: pro
      pod-type: age-of-ai
  template:
    metadata:
      labels:
        app: age-of-ai
        environment: pro
        pod-type: age-of-ai
    spec:
      serviceAccountName: aws-secret-manager-sa
      imagePullSecrets:
        - name: github/deploy
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: hyperfy2-efs-claim
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aws-secrets
      containers:
        - name: age-of-ai
          image: ghcr.io/numengames/numinia-hyperfy2:sha-b598263a3eb99e5a8879da871f50c8099d64c39d
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: age-of-ai
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
