clusters/prod-cluster/organizations/numinia/age-of-ai/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: age-of-ai
    pod-type: age-of-ai
  name: age-of-ai
  namespace: numinia
spec:
  selector:
    app: age-of-ai
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
