clusters/prod-cluster/organizations/numinia/age-of-ai/base/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hyperfy2-numinia-age-of-ai-route
  namespace: numinia
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`age-of-ai.numinia.xyz`)"
      kind: Rule
      services:
        - name: "hyperfy2-numinia-age-of-ai-service"
          port: 3000

  tls:
    secretName: numinia-tls
